# acq-ai-plugin-demo2

./: README.md  main.py  pyproject.toml  test_country_loading.py
country_specific/cz/: __init__.py  greeting.py  name.py
country_specific/hu/: __init__.py  address.py  greeting.py  name.py
shared/: __init__.py  main.py  pyproject.toml
shared/core/: country_loader.py  registry.py
shared/services/: __init__.py  address.py  greeting.py  name.py
